# full-stack-django-react-app-ecommerce-1

./: .gitignore  ERD.md  ERD_mermaid.md  LICENSE  Readme.md  entity_relationship_diagram.puml  schema.yml
backend/: API_DOCUMENTATION.md  ERD_mermaid.md  entity_relationship_diagram.puml  pyproject.toml  requirements.txt
backend/custom_scripts/: load_data_from_csv.py
backend/data/: category.csv
backend/ecommerce/: settings.py  urls.py
backend/orders/: admin.py  models.py  serializers.py  urls.py
backend/orders/migrations/: 0001_initial.py
backend/products/: models.py  serializers.py
backend/products/migrations/: 0001_initial.py  0002_product_price_must_be_greater_than_zero.py  0003_product_unique_product_name.py
backend/products/tests/: test_models.py  test_views.py
backend/promotions/: admin.py  models.py  serializers.py  urls.py
backend/promotions/migrations/: 0001_initial.py
custom_scripts/: load_data_from_csv.py
data/: orderproduct.csv  product.csv
ecommerce/: settings.py  urls.py
frontend/: PLAYWRIGHT.MD  UseCases.md  package-lock.json  package.json  playwright.config.ts  test-results.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e-tests/: home.spec.ts  products.spec.ts
frontend/public/: mockServiceWorker.js
frontend/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts
frontend/src/hooks/: useAuth.ts  useProductPromotion.ts
frontend/src/mocks/: data.ts  handlers.ts
orders/: admin.py  models.py  views.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
promotions/: serializers.py  views.py
(+25 files in other folders)
